--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" href="style/all.min.css">
    <link rel="stylesheet" href="style/style.css">
    <link rel="stylesheet" href="style/media.css">
-   <link rel="icon shurtcut" href="image/logo.png">
+   <link rel="shortcut icon" href="image/logo.png">
    <title>Vue Cinema</title>
 </head>
 
